--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "react-icons": "^4.2.0",
     "react-responsive-carousel": "^3.2.18",
     "react-router": "^5.2.0",
